<resources>
    <string name="app_name">About MeApp</string>
    <string name="sulaiman">Sulaiman</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">Hello, my name is Sulaiman.
    \n
    \nI\'am really happy today because finally i can bought Dragon Ball FighterZ (DBFZ), with season 1 pass.
    \n
    \nI buy it on Lunar Steam Sale 2021, that giving me a good deal on the game that i can buy it with
        the season pass 1 only for 10,75 USD (Rp. 150.400,00 in IDR) making it a hell lot cheaper instead
        the prices without the sales which is 67,17 (Rp. 940.000,00 in IDR) USD DAMN that was a really good
        deal so i can\'t just let it go. Especially when i\'am a Dragonball fanboy so i have no other choices
        but to buy it.
        \n
        \nWhen i can buy it why not, right? and i only buy it when it was on a crazy sale like
        this and especially when i know DBFZ community is still active i have to buy it even thou for now
        i will play it using keyboard but its okay i will but controller when i can to improve my fighting
        gaming experience.
        \n
        \nThe problem is i also need a second screen for my laptop to make multitasking
        easier, now i\'am confused which one should i get. And i also need to search for an second screen
        for my laptop.
    </string>
    <string name="dbfz_image">DBFZ Image</string>
    <string name="ask_nickname">What is your nickname?</string>
    <string name="done">Done</string>
</resources>